<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY app_name "Codec Info">]>

<resources>
    <string name="app_name" translatable="false">&app_name;</string>

    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="about_app">About &app_name;…</string>
    <string name="app_version">Version %s</string>
    <string name="copyright" translatable="false">\u00A9 2018-2026 Parseus</string>
    <string name="source_code_link" translatable="false">https://github.com/Parseus/codecinfo</string>

    <string name="action_filter_by_feature">Filter by feature</string>
    <string name="action_warning">Show device warnings</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search codec/DRM info</string>
    <string name="search_settings_description">Codec/DRM info</string>

    <string name="codec_list">Codec list</string>
    <string name="codec_drm_all_info">All codecs and DRMs with details</string>

    <string name="no_codecs_available">No codecs available.\n\nIf you didn\'t set any filtering options, the list of codecs might not be available due to an Android platform bug.</string>
    <string name="no_drms_available">No DRMs available.\n\nIf you didn\'t set any filtering options, the list of DRMs might not be available due to an Android platform bug.</string>

    <string name="category_audio">Audio</string>
    <string name="category_video">Video</string>
    <string name="category_drm">DRM</string>
    <string name="category_other">Other</string>

    <string name="decoder">Decoder</string>
    <string name="encoder">Encoder</string>

    <string name="codec_details">Codec details</string>
    <string name="alias_for">Alias for</string>

    <string name="frames_per_second">fps</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_or_not_supported">Unknown or not supported</string>

    <string name="profiles">Profiles</string>
    <string name="profile_levels">Profile levels</string>

    <string name="max_instances">Max supported instances</string>

    <string name="bitrate_range">Bitrate range</string>
    <string name="input_channels">Input channels</string>
    <string name="sample_rates">Sample rates</string>

    <string name="max_resolution">Max resolution</string>
    <string name="max_bitrate">Max bitrate</string>
    <string name="frame_rate">Frame rate</string>
    <string name="max_frame_rate_per_resolution">Max frame rate per resolution</string>
    <string name="color_profiles">Color profiles</string>

    <string name="feature_support_format">%1$s (required: %2$s)</string>
    <string name="feature_low_latency_vendor_supported_decoder">true (enabled by setting the %s key to 1 in decoder\'s MediaFormat)</string>
    <string name="feature_low_latency_vendor_supported_encoder">true (enabled by setting the %s key to 1 in encoder\'s MediaFormat)</string>
    <string name="adaptive_playback">Adaptive playback</string>
    <string name="dynamic_timestamp">Dynamic timestamp</string>
    <string name="intra_refresh">Intra refresh</string>
    <string name="multiple_access_units">Multiple access units</string>
    <string name="partial_access_units">Partial access units per input buffer</string>
    <string name="partial_frames">Partial frames queuing</string>
    <string name="secure_playback">Secure playback decryption</string>
    <string name="tunneled_playback">Tunneled playback</string>
    <string name="low_latency_decoder">Low latency decoding</string>
    <string name="low_latency_encoder">Low latency encoding</string>
    <string name="qp_bounds">Quantization parameter bounds</string>
    <string name="encoding_statistics">Exporting encoding statistics</string>
    <string name="hdr_editing">HDR editing</string>
    <string name="vendor_parameters">Supported vendor parameters</string>
    <string name="detached_surface">Can detach the surface when in Surface mode</string>
    <string name="dynamic_color_aspects">Dynamic change of color aspects</string>
    <string name="hlg_editing">HLG editing</string>
    <string name="roi_encoding">Region of interest encoding</string>
    <string name="supported_layering_schemas">Supported temporal layering schemas</string>
    
    <string name="security_model">Security model</string>
    <string name="security_model_sandboxed">Sandboxed</string>
    <string name="security_model_memory_safe">Memory-safe</string>
    <string name="security_model_trusted_content_only">Trusted content only</string>

    <string name="bitrate_modes">Bitrate modes</string>
    <string name="cbr" translatable="false">Constant bitrate (CBR)</string>
    <string name="cq" translatable="false">Constant quality (CQ)</string>
    <string name="vbr" translatable="false">Variable bitrate (VBR)</string>
    <string name="cbr_fd">Constant bitrate (CBR) with frame drops</string>

    <string name="complexity_range">Encoding complexity range</string>
    <string name="quality_range">Encoding quality range</string>
    <string name="range_default">default</string>

    <string name="hardware_acceleration">Hardware acceleration</string>
    <string name="software_only">Software-only</string>

    <string name="codec_provider">Codec provider</string>
    <string name="codec_provider_android">Android platform</string>
    <string name="codec_provider_oem">Device vendor / OEM</string>

    <string name="performance_points">Supported performance points</string>

    <string name="drm_list">DRM list</string>
    <string name="drm_details">DRM details</string>
    <string name="drm_details_selected">Selected DRM details</string>

    <string name="drm_property_uuid">UUID</string>
    <string name="drm_property_vendor">Vendor</string>
    <string name="drm_property_version">Version</string>
    <string name="drm_property_device_id">Device unique ID</string>
    <string name="drm_property_algorithms">Algorithms</string>
    <string name="drm_property_security_level">Max security level</string>
    <string name="drm_property_system_id">System ID</string>
    <string name="drm_property_provisioning_id">Provisioning unique ID</string>
    <string name="drm_property_hdcp_level">Current HDCP level</string>
    <string name="drm_property_max_hdcp_level">Max HDCP level supported</string>
    <string name="drm_property_usage_reporting_support">Usage reporting supported</string>
    <string name="drm_property_open_sessions">Number of open sessions</string>
    <string name="drm_property_max_sessions">Max number of sessions</string>
    <string name="drm_property_oem_crypto_api_version">OEM Crypto API version</string>
    <string name="drm_property_oem_crypto_api_session_id">OEM Crypto session ID</string>
    <string name="drm_property_license_type">License type</string>
    <string name="drm_property_play_allowed">Playback allowed</string>
    <string name="drm_property_persist_allowed">Persisting allowed</string>
    <string name="drm_property_renew_allowed">Renewal allowed</string>
    <string name="drm_property_license_duration_rem">License duration remaining</string>
    <string name="drm_property_playback_duration_rem">Playback duration remaining</string>
    <string name="drm_property_privacy_mode">Privacy mode</string>
    <string name="drm_property_renewal_server_url">Renewal server URL</string>
    <string name="drm_property_session_sharing">Session sharing</string>
    <string name="drm_property_app_id">Application ID</string>
    <string name="drm_property_origin">Origin</string>
    <string name="drm_property_service_certificate">Service certificate</string>
    <string name="drm_property_current_srm_version">Current System Renewability Message (SRM) version</string>
    <string name="drm_property_srm_update_support">System Renewability Message (SRM) update supported</string>
    <string name="drm_property_resource_rating_tier">Resource rating tier</string>
    <string name="drm_property_decrypt_hash_support">Hash function supported for Full Decrypt Path Testing</string>
    <string name="drm_property_provisioning_service_certificate">Provisioning service certificate</string>
    <string name="drm_property_metrics">Metrics</string>
    <string name="drm_property_analog_output_capabilities">Analog output capabilities</string>
    <string name="drm_property_can_disable_analog_output">Can disable analog output</string>

    <string name="decrypt_hash_support_not_supported">0 (not supported)</string>
    <string name="decrypt_hash_support_crc">1 (CRC32)</string>
    <string name="decrypt_hash_support_partner">2 (partner-defined hash)</string>

    <string name="drm_clearkey_dash_if">ClearKey (DASH-IF)</string>
    <string name="drm_clearkey_pssh_name">ClearKey (Common PSSH box format)</string>
    <string name="drm_fairplay_netflix_name">Apple FairPlay (unofficial; Netflix)</string>

    <string name="hdcp_level_unknown">@string/unknown</string>
    <string name="hdcp_level_none">Unprotected</string>
    <string name="hdcp_level_v1">HDCP 1.0</string>
    <string name="hdcp_level_v2">HDCP 2.0 Type 1</string>
    <string name="hdcp_level_v2_1">HDCP 2.1 Type 1</string>
    <string name="hdcp_level_v2_2">HDCP 2.2 Type 1</string>
    <string name="hdcp_level_v2_3">HDCP 2.3 Type 1</string>
    <string name="hdcp_level_no_digital_output">No digital output (implicitly secure)</string>

    <string name="known_issue_warning">Known issue(s) detected:</string>
    <string name="known_issue_detected">Known issue detected!</string>
    <string name="known_issue_desc_header">Description:</string>
    <string name="known_issue_sources_header">Sources:</string>
    <string name="known_issue_content_description">Known issue %1$d: %2$s Sources: %3$s</string>

    <string name="keyboard_shortcuts">Keyboard shortcuts</string>
    <string name="keyboard_shortcut_search">Search</string>
    <string name="keyboard_shortcut_share">Share</string>
    <string name="keyboard_shortcut_settings">Settings</string>
    <string name="keyboard_shortcut_copy">Copy current selection</string>
    <string name="keyboard_shortcut_paste">Paste into search</string>
    <string name="keyboard_shortcut_close">Close</string>

    <string name="copied_to_clipboard">Copied to clipboard</string>

    <string name="keyboard_key_ctrl_f" translatable="false">Ctrl + F</string>
    <string name="keyboard_key_ctrl_s" translatable="false">Ctrl + S</string>
    <string name="keyboard_key_ctrl_c" translatable="false">Ctrl + C</string>
    <string name="keyboard_key_ctrl_v" translatable="false">Ctrl + V</string>
    <string name="keyboard_key_ctrl_comma" translatable="false">Ctrl + ,</string>
    <string name="keyboard_key_esc" translatable="false">Esc</string>

    <string name="feedback_email" translatable="false">parseus.dev@gmail.com</string>
    <string name="email_subject">Feedback</string>
    <string name="choose_email">Send feedback via…</string>
    <string name="no_apps_for_action">No apps can perform this action.</string>
    <string name="no_email_apps">No apps can perform this action. Unable to copy the email address to the clipboard.</string>
    <string name="no_email_apps_clipboard">No apps can perform this action. Email address was copied to the clipboard.</string>

    <string name="about_licenses">Licenses</string>
    <string name="about_license_notice_title">Notices for libraries:</string>
    <string name="about_changelog">What\'s new</string>
    <string name="about_report_bugs">Report bugs</string>
    <string name="about_send_feedback">Send feedback</string>

    <string name="state_expanded">Expanded</string>
    <string name="state_collapsed">Collapsed</string>
    <string name="state_selected">Selected</string>

    <string name="context_menu_copy_property_value">Copy property value</string>
    <string name="context_menu_copy_property_full">Copy property name and value</string>
</resources>
