<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_item_search"
        app:showAsAction="always"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item android:id="@+id/menu_item_share"
        app:showAsAction="ifRoom"
        android:title="@string/action_share"
        android:contentDescription="@string/action_share"
        android:icon="@drawable/ic_share" />

    <item android:id="@+id/menu_item_settings"
        app:showAsAction="ifRoom"
        android:title="@string/action_settings"
        android:contentDescription="@string/action_settings"
        android:icon="@drawable/ic_settings"/>

</menu>