<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="?attr/dialogPreferredPadding"
        android:paddingRight="?attr/dialogPreferredPadding"
        android:paddingTop="@dimen/abc_dialog_padding_top_material"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
            app:srcCompat="@mipmap/ic_launcher" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            tools:text="Codec Info"/>

    </LinearLayout>
    
    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/abc_dialog_title_divider_material" />

    <TextView
        android:id="@+id/version_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="?attr/dialogPreferredPadding"
        android:paddingRight="?attr/dialogPreferredPadding"
        android:text="@string/app_version"
        style="@style/MaterialAlertDialog.MaterialComponents.Body.Text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="?attr/dialogPreferredPadding"
        android:paddingRight="?attr/dialogPreferredPadding"
        android:text="@string/copyright"
        style="@style/MaterialAlertDialog.MaterialComponents.Body.Text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="?attr/dialogPreferredPadding"
        android:paddingRight="?attr/dialogPreferredPadding"
        android:autoLink="web"
        android:text="@string/source_code_link"
        style="@style/MaterialAlertDialog.MaterialComponents.Body.Text"/>

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="@dimen/dialog_button_margin_size"
        android:layout_marginEnd="@dimen/dialog_button_margin_size"
        android:layout_gravity="end"
        android:text="@android:string/ok"
        style="?attr/buttonBarPositiveButtonStyle"/>

</LinearLayout>